// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useBook should return book 1`] = `
Object {
  "data": Object {
    "cover": "https://loremflickr.com/1280/1910/animals",
    "desc": Object {
      "is_folded": true,
      "text": "Et totam eveniet culpa qui quibusdam ad facere. Rerum distinctio atque consequatur amet iure sequi voluptas dolorem. Suscipit non quam. Deserunt omnis sint similique cum aliquid est sunt odio nemo. Inventore est ut ut magnam ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate. Sint aspernatur ullam a est repellendus ducimus. Maxime id est dolor nobis fuga. Voluptatem veniam maiores aut laborum perferendis harum quo minus. Consequatur natus nihil dicta et. Placeat et aut earum harum a.",
    },
    "digest": Object {
      "is_folded": true,
      "text": "Magni fuga et cumque excepturi enim voluptas. Quasi ipsum ut. Quia exercitationem sequi voluptates delectus ullam laborum. Porro et consequuntur harum. Hic praesentium maiores qui asperiores qui vero accusantium nemo voluptas. Sequi voluptatum perferendis aperiam qui assumenda velit necessitatibus. Adipisci animi molestias aspernatur quas vel consequatur veniam. Nisi voluptas eos. Facere laboriosam rerum quidem possimus nisi sit totam veniam. Repellendus magni et similique consequatur vel officiis ullam. Est quidem ullam eum voluptas porro et voluptates doloribus. Aut minima reprehenderit commodi nemo ducimus atque.",
    },
    "id": "bk1000",
    "mate": Object {
      "author": "Lily",
      "isbn": "978-1874812449",
      "language": "Korean",
      "paperback": 950,
      "publication_date": "2022-07-25",
      "publisher": "Doyle - Gleichner",
      "subtitle": "Facilis et dolorem non omnis qui neque velit quis dolore.",
    },
    "rates": 2,
    "tags": Array [
      "deleniti quia",
      "deleniti quia",
      "deleniti quia",
      "deleniti quia",
      "deleniti quia",
      "deleniti quia",
      "deleniti quia",
    ],
    "title": "text",
  },
  "error": undefined,
  "isLoading": false,
  "isValidating": false,
  "mutate": [Function],
}
`;

exports[`useBooks should return books 1`] = `
Object {
  "data": Array [
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
  ],
  "error": undefined,
  "isLoading": false,
  "isValidating": false,
  "mutate": [Function],
}
`;

exports[`useBooksInfinite should return books 1`] = `
Object {
  "data": Array [
    Array [
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
    ],
  ],
  "error": undefined,
  "isLoading": false,
  "isValidating": false,
  "mutate": [Function],
  "setSize": [Function],
  "size": 1,
}
`;
